# petitRADTRANS

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.rst  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile  build.sh
docs/: conf.py  index.rst  requirements.txt  utils.py
docs/JOSS/: metadata.yml  paper.bib  paper.md
docs/_static/: Radtrans_v3.0.0_detailed_changelog.html
docs/content/: adding_opacities.rst  available_opacities.rst  contributing.rst  installation.rst  installation.rst~  new_version_preview.rst  opa_add.rst  pRT3_changes_description.rst  retrieval_examples.rst  todo_available_opacities.rst  todo_opa_add.rst  tutorial.rst  version3_preview.rst
petitRADTRANS/: __debug.py  __file_conversion.py  __init__.py  __init_meson_build.py  __setup_meson_build.py  _input_data.py  _input_data_loader.py  _read_opacities.py  fort_input.f90  fort_spec.f90  math.py  meson.build  molar_mass.py  nat_cst.py  phoenix.py  physical_constants.py  physics.py  planet.py  prt_molmass.py  pyth_input.py  radtrans.py  spectral_model.py  temperature_structures.py  utils.py  version.py
petitRADTRANS/ccf/: _hr_andes_script.py  _hr_retrieval_script_wasp39_b.py  _jwst_retrieval_script_wasp39_b.py  _script.py  _test_high_resolution.py  ccf.py  ccf_core.py  ccf_utils.py  etc_cli_module.py  high_resolution_retrieval.py  high_resolution_retrieval_HD_189733_b.py  high_resolution_retrieval_wasp39_b.py  jwst_retrieval_wasp39_b.py  meson.build  mock_observation.py  model_containers.py  pipeline.py  spectra_utils.py  sub_changelog.md  utils.py
petitRADTRANS/chemistry/: __init__.py  clouds.py  condensation.py  core.py  meson.build  pre_calculated_chemistry.py  prt_easychem.py  prt_molmass.py  utils.py
petitRADTRANS/cli/: eso_etc_cli.py  eso_skycalc_cli.py  meson.build  prt_cli.py
petitRADTRANS/config/: __init__.py  configuration.py  meson.build
petitRADTRANS/containers/: meson.build  planet.py  spectral_model.py
petitRADTRANS/fortran_src/: fort_input.f90  fort_spec.f90  fort_spec_fast.f90  fortran_chemistry.f90  fortran_convolve.f90  fortran_inputs.f90  fortran_radtrans_core.f90  fortran_rebin.f90  rebin_give_width.f90
petitRADTRANS/opacities/: __init__.py  meson.build  opacities.py
petitRADTRANS/plotlib/: __init__.py  meson.build  plotlib.py  style.py
petitRADTRANS/poor_mans_nonequ_chem/: __init__.py  meson.build  poor_mans_nonequ_chem.py
petitRADTRANS/retrieval/: __init__.py  chemistry.py  cloud_cond.py  data.py  meson.build  models.py  parameter.py  plot_style.py  plotting.py  preparing.py  psis.py  reprocessing.py  retrieval.py  retrieval_config.py  util.py  utils.py
petitRADTRANS/retrieval/examples/transmission/evaluate_hst_example_clear_spec/: hst_example_clear_spec_bestfit_model_contribution.npy  hst_example_clear_spec_bestfit_model_full.npy  hst_example_clear_spec_logL_per_datapoint_HST.npy  hst_example_clear_spec_pressures.npy  hst_example_clear_spec_ret_summary.txt  hst_example_clear_spec_temps.npy
petitRADTRANS/retrieval/examples/transmission/evaluate_hst_example_clear_spec_noH2O/: hst_example_clear_spec_noH2O_bestfit_model_contribution.npy  hst_example_clear_spec_noH2O_bestfit_model_full.npy  hst_example_clear_spec_noH2O_logL_per_datapoint_HST.npy  hst_example_clear_spec_noH2O_pressures.npy  hst_example_clear_spec_noH2O_ret_summary.txt  hst_example_clear_spec_noH2O_temps.npy
petitRADTRANS/retrieval/examples/transmission/out_PMN/: hst_example_clear_spec_.txt  hst_example_clear_spec_IS.iterinfo  hst_example_clear_spec_IS.points  hst_example_clear_spec_IS.ptprob  hst_example_clear_spec_live.points  hst_example_clear_spec_noH2O_.txt  hst_example_clear_spec_noH2O_IS.iterinfo  hst_example_clear_spec_noH2O_IS.points  hst_example_clear_spec_noH2O_IS.ptprob  hst_example_clear_spec_noH2O_live.points  hst_example_clear_spec_noH2O_params.json  hst_example_clear_spec_noH2O_phys_live.points  hst_example_clear_spec_noH2O_stats.json  hst_example_clear_spec_noH2O_summary.txt  hst_example_clear_spec_params.json  hst_example_clear_spec_phys_live.points  hst_example_clear_spec_stats.json  hst_example_clear_spec_summary.txt
petitRADTRANS/retrieval_examples/emission/: __init__.py  config.py  data.py  priors.py  util.py
petitRADTRANS/slurm_runs/: _script_andes_slurm.py  meson.build  sbatch.py  utils.py
petitRADTRANS/stellar_spectra/: meson.build  phoenix.py
scripts/: _ccf_hd189.py  _ccf_hd209.py  _ccf_old.py  _hr_andes_script.py  _hr_retrieval_script.py  _hr_retrieval_script_carmenes.py  _hr_retrieval_script_carmenes_plots.py  _hr_retrieval_script_wasp39_b.py  _jwst_retrieval_script_wasp39_b.py  _script.py  _test_high_resolution.py  ccf_utils.py  high_resolution_retrieval.py  high_resolution_retrieval_HD_189733_b.py  high_resolution_retrieval_wasp39_b.py  jwst_retrieval_wasp39_b.py  mock_observation.py  model_containers.py  phase_area.py
scripts/plot/: style.py
testing/: test_high_res.py  test_intro.py  test_scatter_intro.py  tst_clouds.py  tst_intro.py  tst_scatter_intro.py
tests/: __README.md  _performance_test_correlated_k.py  _performance_test_line_by_line.py  _performance_test_spectral_model_line_by_line.py  _test_CO_line_lists.py  _test_H2O_line_lists.py  _test_TiO_line_lists.py  _test_data.py  _test_high_res.py  _test_line_shapes_alkalis.py  benchmark.py  context.py  loo_retrieval.ipynb  reference_files_generators.py  test_chemistry.py  test_config.py  test_cross_correlation.py  test_fortran_modules.py  test_planet.py  test_radtrans_correlated_k.py  test_radtrans_correlated_k_scattering.py  test_radtrans_correlated_k_surface_scattering.py  test_radtrans_line_by_line.py  test_radtrans_line_by_line_sampling.py  test_retrieval.py  test_retrieval_spectral_model.py  test_spectral_model_correlated_k.py  test_spectral_model_line_by_line.py  test_spectral_model_line_by_line_custom.py  test_utility_functions.py  utils.py
tests/data/: NASA_exoplanet_archive_test.tab  co_added_cross_correlation_ref.npz  config_test_radtrans.json  simple_spectrum_ref.npz  test_stats.json  (+2 more)
(+169 files in other folders)
