subdir('retrieval')
subdir('containers')
subdir('config')
#subdir('slurm_runs')
subdir('chemistry')
subdir('stellar_spectra')
subdir('cli')
subdir('ccf')
subdir('plotlib')

py.install_sources([
    'math.py',
    'physical_constants.py',
    'physics.py',
    'radtrans.py',
    'utils.py',
    '_input_data_loader.py',
    '__file_conversion.py',
    '__setup_meson_build.py',
    '__init__.py',
    ],
    subdir: 'petitRADTRANS'
)
