subdir('retrieval')
subdir('config')
#subdir('slurm_runs')
subdir('chemistry')
subdir('stellar_spectra')
subdir('cli')
subdir('ccf')
subdir('plotlib')
subdir('slurm_runs')

py.install_sources([
    'math.py',
    'physical_constants.py',
    'physics.py',
    'planet.py',
    'radtrans.py',
    'spectral_model.py',
    'utils.py',
    '_input_data_loader.py',
    '__file_conversion.py',
    '__setup_meson_build.py',
    '__init__.py',
    ],
    subdir: 'petitRADTRANS'
)
