subdir('ccf')
subdir('chemistry')
subdir('cli')
subdir('ccf')
subdir('config')
subdir('plotlib')
subdir('retrieval')
subdir('slurm_runs')
subdir('stellar_spectra')

py.install_sources([
    'math.py',
    'physical_constants.py',
    'physics.py',
    'planet.py',
    'radtrans.py',
    'spectral_model.py',
    'utils.py',
    '_input_data.py',
    '_input_data_loader.py',
    '__debug.py',
    '__file_conversion.py',
    '__setup_meson_build.py',
    '__init__.py',
    ],
    subdir: 'petitRADTRANS'
)
