py.install_sources([
    'chemistry.py',
    'cloud_cond.py',
    'data.py',
    'models.py',
    'parameter.py',
    'plotting.py',
    'plot_style.py',
    'preparing.py',
    'retrieval.py',
    'retrieval_config.py',
    'util.py',
    '__init__.py',
    ],
    subdir: 'petitRADTRANS/retrieval'
)
